--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run tests
         run: |
-            docker run --rm -v ${{ github.workspace }}:/src -v /mnt/jenkins:/mnt/jenkins:rw -v /var/cache/jenkins:/var/cache/jenkins:rw ci_rust_$GITHUB_SHA bash -ex -c '
+            docker run --rm -v ${{ github.workspace }}:/src -v /mnt/jenkins/python-sdk-ci-test:/root/Documents/cepton w ci_rust_$GITHUB_SHA bash -ex -c '
             cd /app
             python3 -m unittest discover -s tests
             '
