--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -4,10 +4,11 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-# Create a location where the test calibration files will go
-RUN mkdir -p /root/Documents/cepton
-
 COPY . .
 RUN pip install --upgrade pip && pip install .
+
+# Copy all calibration files from the mounted folder into the 
+# sdk directory so it can find them.
+COPY calibration_*.json /app/cepton_sdk3/lib/linux-x64/
 
 CMD ["/bin/bash"]
