--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "cepton-sdk3"
-version = "3.0.17.14.post6"
+version = "3.0.17.14"
 
 dependencies = ["numpy>=1.21"]
 authors = [
